--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@
 # REACT_APP_MEASUREMENTID=
 
 # GENERATE_SOURCEMAP=false
-#REACT_APP_BASE_URL=https://api.sls.tn
-REACT_APP_BASE_URL=http://57.129.38.15:3000
+REACT_APP_BASE_URL=https://api.sls.tn
+#REACT_APP_BASE_URL=http://57.129.38.15:3000
 #REACT_APP_BASE_URL=${process.env.REACT_APP_BASE_URL}
 #REACT_APP_BASE_URL=http://localhost:3000
